test/fixtures/source-map/output/source_map_throw_construct.snapshot
<project-root>/test/fixtures/source-map/output/source_map_throw_construct.mts:13
    throw new Error('message');
          ^

Error: message
    at new Foo (<project-root>/test/fixtures/source-map/output/source_map_throw_construct.mts:13:11)
    at <anonymous> (<project-root>/test/fixtures/source-map/output/source_map_throw_construct.mts:17:1)
    at <node-internal-frames>

Node.js <node-version>
